<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="atownsend.thingscompanion.MainActivity"
    >

  <TextView
      android:text="@string/red_light_status"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/textView"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="16dp"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="16dp"
      app:layout_constraintHorizontal_chainStyle="packed"
      android:textAppearance="@style/TextAppearance.AppCompat.Headline"
      />
  <Switch
      android:switchPadding="8dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/red_switch"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/textView"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/blue_switch"
      android:theme="@style/RedSwitchStyle"
      app:layout_constraintBottom_toBottomOf="@+id/textView"
      />
  <TextView
      android:text="@string/blue_light_status"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/textView2"
      android:layout_marginTop="32dp"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      app:layout_constraintStart_toStartOf="@+id/textView"
      android:textAppearance="@style/TextAppearance.AppCompat.Headline"
      />
  <Switch
      android:switchPadding="8dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/blue_switch"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="16dp"
      app:layout_constraintTop_toTopOf="@+id/textView2"
      app:layout_constraintStart_toStartOf="@+id/green_switch"
      app:layout_constraintHorizontal_bias="0.0"
      android:theme="@style/BlueSwitchStyle"
      app:layout_constraintBottom_toBottomOf="@+id/textView2"
      />
  <TextView
      android:text="@string/green_light_status"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/textView3"
      android:layout_marginTop="32dp"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      app:layout_constraintStart_toStartOf="@+id/textView2"
      android:textAppearance="@style/TextAppearance.AppCompat.Headline"
      />
  <Switch
      android:switchPadding="8dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/green_switch"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="16dp"
      app:layout_constraintStart_toEndOf="@+id/textView3"
      android:layout_marginStart="32dp"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintTop_toTopOf="@+id/textView3"
      android:theme="@style/GreenSwitchStyle"
      app:layout_constraintBottom_toBottomOf="@+id/textView3"
      />
  <Button
      android:text="@string/turn_all_off"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/turn_all_off_btn"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="16dp"
      android:layout_marginTop="32dp"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintEnd_toStartOf="@+id/turn_all_on_btn"
      android:layout_marginEnd="8dp"
      />
  <Button
      android:text="@string/turn_all_on"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/turn_all_on_btn"
      app:layout_constraintStart_toEndOf="@+id/turn_all_off_btn"
      android:layout_marginStart="8dp"
      app:layout_constraintTop_toTopOf="@+id/turn_all_off_btn"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="16dp"
      />
</android.support.constraint.ConstraintLayout>
